testdata/baselines/reference/submodule/compiler/jsExtendsImplicitAny.errors.txt
/b.js(1,17): error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
/b.js(5,17): error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
/b.js(9,17): error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.


==== /a.d.ts (0 errors) ====
    declare class A<T> { x: T; }
    
==== /b.js (3 errors) ====
    class B extends A {}
                    ~
!!! error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
    new B().x;
    
    /** @augments A */
    class C extends A { }
                    ~
!!! error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
    new C().x;
    
    /** @augments A<number, number, number> */
    class D extends A {}
                    ~
!!! error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
    new D().x;